# PlayAsYouLike

./: .gitignore  buf.gen.yaml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: lint-format.yml
app/: globals.css  layout.tsx  page.test.tsx  page.tsx
app/lib/: active-session-storage.test.ts  active-session-storage.ts  game-result-storage.test.ts  game-result-storage.ts  session-storage.test.ts  session-storage.ts
app/play/: judgement.test.ts  judgement.ts
audio_svc/: __init__.py  main.py  pyproject.toml  server.py
audio_svc/proto/: __init__.py  audio_analysis_pb2.py  audio_analysis_pb2_grpc.py
docs/00_practice/: prompt.md  reference.md
docs/01_vision/: vision.md
docs/02_requirements/: glossary.yaml  open_questions_2025-07-29.md  story_map.yaml
docs/03_design/: open_questions_2025-07-29.md  open_questions_2025-07-31.md  youtube_dl_risk.md
docs/04_dev/: audio_analysis_service.md  coding_guidelines.md  tech_stack.md
docs/05_test/: strategy.md
proto/: audio_analysis.proto
src/: app.ts
src/routes/: sessions.test.ts  sessions.ts
src/services/: audio-analysis-client.test.ts  audio-analysis-client.ts  beatmap-generator.test.ts  beatmap-generator.ts  preset-service.ts  replay-service.test.ts  replay-service.ts  seed-repository.ts  session-repository.ts
src/types/: fastify.d.ts
src/utils/: random.ts  url.ts
tests/: __init__.py  requirements.txt
tests/e2e/: US-001.feature  US-002.feature  US-003.feature  environment.py
tests/unit/: __init__.py
types/: session.ts
(+55 files in other folders)
